<resources>
    <string name="app_name">Taller3CompuMovil</string>
    <string name="login">Login</string>
    <string name="register">Register </string>
    <string name="login2">LOGIN</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="mail">E-mail</string>
    <string name="contra">Contraseña</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="disponible">Establecer como disponible</string>
    <string name="cerrar">Cerrar Sesion</string>
    <string name="lista">Listar disponibles</string>
    <string name="posicion">Posición </string>
    <string name="actividad">Taller 3 </string>
    <string name="title_activity_maps_pair">MapsPairActivity</string>
</resources>